--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,12 @@
 * {
-  font-family: 'Lato', Helvetica, sans-serif;
-  color: #333447;
-  line-height: 1.5;
+    font-family: 'Lato', Helvetica, sans-serif;
+    color: #333447;
+    line-height: 1.5;
+}
+
+html,body{
+    background: #f0f0F0;
+    
 }
 
 h1 {
@@ -9,55 +14,67 @@ h1 {
 }
 
 input {
-  padding: .5em .6em;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 3px #ddd;
-  border-radius: 4px;
-  vertical-align: middle;
-  box-sizing: border-box;
-  width:300px;
+    padding: .5em .6em;
+    margin-right: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 3px #ddd;
+    border-radius: 4px;
+    vertical-align: middle;
+    box-sizing: border-box;
+    width:300px;
 }
 
 form {
-  margin-bottom:10px;
+    margin-bottom:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
-  height: 31px;
-  width: 110px;
-  text-align: center;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 200;
-  background: transparent;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  margin: 20px 0;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  outline: none;
-  border: 1px solid #FE7880;
-  color: #FE7880;
+    background: #FFFFFF;
+    height: 31px;
+    width: 110px;
+    text-align: center;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 200;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    margin: 20px 0;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+    border: 1px solid #FE7880;
+    color: #FE7880;
 }
 
 .imgs{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-
-img{
-    height: 20%;
-    width: 20%;
-    margin:4px;
-    transition: height 2s;
+    align-items: center;
 }
 
 
 /*
-img:hover{
-    height:30%;
-    width:30%;
+.imgs{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+*/
 
-}*/
+img{
+    border:black 1px solid;
+    height: 20%;
+    width: 20%;
+    margin:4px;
+    transition: height 2s;
+    border-radius: 4px;
+}
+
+
+
+/*
+i*/
